# kubectl-whois.py

./: pyproject.toml
kubectl_whois/: __main__.py  client.py  output.py  program.py
