[tool.poetry]
name = "kubectl-whois"
version = "0.1.0"
description = ""
authors = ["vdinovi <vdinovi@invoca.com>"]
readme = "README.md"
packages = [{include = "kubectl_whois"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
kubernetes = "^25.3.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.5"
flake8-isort = "^5.0.3"
mypy = "^0.991"

[tool.poetry.scripts]
kubectl-whois = "kubectl_whois.program:execute"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"